salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Description__c</fullName>
    <label>Additional Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>