salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Address__c</fullName>
    <label>Beneficiary Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>