salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/Beneficiary_Email__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Email__c</fullName>
    <label>Beneficiary Email</label>
    <type>Email</type>
</CustomField>