salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/CPT_ID__c.field-meta.xml
<CustomField>
    <fullName>CPT_ID__c</fullName>
    <label>CPT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>