salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <label>New Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>