salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/New_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Name__c</fullName>
    <label>New Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>