salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/Previous_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address__c</fullName>
    <label>Previous Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>