salesforce-metadata/force-app/main/default/objects/Support_Channel__c/fields/SSN_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>SSN_Tax_ID__c</fullName>
    <label>SSN/Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>